<resources>
    <string name="app_name">Кулинарная книга</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_hello">Приветствуем вас!</string>
    <string name="recipeTitle_recipeFrag">Название рецепта</string>
    <string name="recipeDescriptionTitle_recipeFrag">Описание</string>
    <string name="recipeDescription_recipeFrag">Содержание описания</string>
    <string name="recipeIngredientTitle_recipeFrag">Используемые ингредиенты</string>
    <string name="recipeIngredient_recipeFrag">Ингредиент</string>
    <string name="recipeStepTitle_recipeFrag">Шаги приготовления</string>
    <string name="recipeStep_recipeFrag">Шаг приготовления</string>
    <string name="descriptionImageRecipe">Фотография блюда</string>
    <string name="exampleTitle">Чебурек</string>
    <string name="exampleDescription">Вкусный, сочный</string>
    <string name="searchView">Найти рецепт</string>
    <string name="favoriteTitle">Избранное</string>
    <string name="btnTextFavorite">Добавить в избранное</string>
    <string name="randomRecipeTitle">Случайный рецепт</string>
    <string name="menuTitle">Меню</string>
    <string name="buyFoodTitle">Заказать продукты</string>
    <string name="changeThemeTitle">Сменить тему</string>
    <string name="feedbackTitle">Обратная связь</string>
    <string name="aboutTitle">О приложении</string>
    <string name="txtOrderCom">Заказывайте продукты через популярные службы доставки еды!</string>
    <string name="DescriptionButtonSamokat">Изображение самоката</string>
    <string name="txtAboutUsTitle">Информация о приложении!</string>
    <string name="txtAboutMain">Приложение разработано на основе лицензии GNU General Public License.\n\nВерсия приложения: 1.0.0\n\nОтдельная благодарность:\n\nStevdza-San(За поучительные гайды по базам данных)\n\nCoding Delivery (Прочая теоретическая помощь)\n\nРазработчик: Мусиенко Максим Русланович</string>
    <string name="txtAboutEnding">\@Кулинарная книга 2023 год. Все права защищены.</string>
    <string name="voiceButtonDescription">Активация голосового ввода</string>
</resources>