<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        tools:context=".fragments.recipe.RecipeFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/alphaBackgroud"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TextView
                    android:id="@+id/recipeTitle_recipeFrag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:alpha="1.0"
                    android:fontFamily="@font/antropos_freefont"
                    android:text="@string/recipeTitle_recipeFrag"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewRecipe"
                    android:layout_width="0dp"
                    android:layout_height="300dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recipeTitle_recipeFrag">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imageView_image"
                            android:layout_width="0dp"
                            android:layout_height="300dp"
                            android:alpha="1"
                            android:contentDescription="@string/descriptionImageRecipe"
                            android:scaleType="centerCrop"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:srcCompat="@tools:sample/avatars" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/recipeDescriptionTitle_recipeFrag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:alpha="1.0"
                    android:fontFamily="@font/antropos_freefont"
                    android:text="@string/recipeDescriptionTitle_recipeFrag"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardViewRecipe" />

                <TextView
                    android:id="@+id/recipeDescription_recipeFrag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:alpha="1.0"
                    android:text="@string/recipeDescription_recipeFrag"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:background="@color/black"
                    android:fontFamily="@font/srbija_sans"
                    android:padding="10sp"
                    android:textStyle="italic"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recipeDescriptionTitle_recipeFrag" />

                <TextView
                    android:id="@+id/recipeIngredientTitle_recipeFrag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:alpha="1.0"
                    android:text="@string/recipeIngredientTitle_recipeFrag"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:fontFamily="@font/antropos_freefont"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recipeDescription_recipeFrag" />

                <TextView
                    android:id="@+id/recipeIngredient_recipeFrag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:alpha="1.0"
                    android:text="@string/recipeIngredient_recipeFrag"
                    android:textColor="@color/white"
                    android:background="@color/black"
                    android:fontFamily="@font/srbija_sans"
                    android:padding="10sp"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recipeIngredientTitle_recipeFrag" />

                <TextView
                    android:id="@+id/recipeStepTitle_recipeFrag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:alpha="1.0"
                    android:text="@string/recipeStepTitle_recipeFrag"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:fontFamily="@font/antropos_freefont"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recipeIngredient_recipeFrag" />

                <TextView
                    android:id="@+id/recipeStep_recipeFrag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:alpha="1.0"
                    android:text="@string/recipeStep_recipeFrag"
                    android:textColor="@color/white"
                    android:background="@color/black"
                    android:fontFamily="@font/srbija_sans"
                    android:padding="10sp"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recipeStepTitle_recipeFrag" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>